--- a/service/src/FlaskWebsite/website/templates/groups.html
+++ b/service/src/FlaskWebsite/website/templates/groups.html
@@ -1,18 +1,25 @@
 {% extends "base.html" %} {% block title %}Group Channels{% endblock %} {% block content
   %}
-  <h1 align="center">Groups</h1>
-  <ul class="list-group list-group-flush" id="groups">
-    {% for group in groups %}
-    <li class="list-group-item">
-      <a href="{{ url_for('views.group_page', group_id=group.id) }}">{{ group.name }}</a>
-    </li>
-    {% endfor %}
-  </ul>
   <form method="POST">
-    <textarea name="group_name" id="group_name" class="form-control"></textarea>
-    <br />
+    <ul class="list-group list-group-flush" id="groups">
+      {% for group in groups %}
+        <li class="list-group-item">
+          <a href="{{ url_for('views.group_page', group_id=group.id) }}">{{ group.name }}</a>
+          <input type="text" name="group_key_join_{{ group.id }}" class="form-control" placeholder="Enter group key">
+          <button type="submit" class="btn btn-primary" name="join_group" value="{{ group.id }}">Join Group</button>
+        </li>
+      {% endfor %}
+    </ul>
+    <input type="text" name="group_name" class="form-control" placeholder="Enter group name">
+    <br>
+    <input type="text" name="group_key" class="form-control" placeholder="Enter group key">
+    <br>
     <div align="center">
-      <button type="submit" class="btn btn-primary">Add Group</button>
+      <button type="submit" class="btn btn-primary" name="add_group">Add Group</button>
     </div>
   </form>
-  {% endblock %}
+{% endblock %}
+
+
+  
+  
