Made it so i can delete Notes and made it so that there are 2 sites 1 for authorized 1 for unauthorized access

--- a/service/src/FlaskWebsite/website/templates/group_page_unauthorized.html
+++ b/service/src/FlaskWebsite/website/templates/group_page_unauthorized.html
@@ -4,11 +4,8 @@
     <ul class="list-group list-group-flush" id="notes">
       {% for note in notes %}
       <li class="list-group-item">
-        {{ note.data }}
-        {{ note.time}}
-        <button type="button" class="close" onClick="deleteNoteGroup({{ note.id }})">
-          <span aria-hidden="true">&times;</span>
-        </button>
+        {{ note.encrypted_data }}
+        {{ note.time }}
       </li>
       {% endfor %}
     </ul>
