--- a/service/src/FlaskWebsite/website/templates/base.html
+++ b/service/src/FlaskWebsite/website/templates/base.html
@@ -87,6 +87,17 @@
   });
   }
 </script>
+  <script type="text/javascript">
+    function deleteNoteGroup(noteGroupId) {
+    fetch("/delete-note-group", {
+      method: "POST",
+      body: JSON.stringify({ noteGroupId: noteGroupId }),
+    }).then((_res) => {
+      window.location.href = window.location.pathname;
+    });
+    }
+  </script>
+</script>
 {% endblock %}
   </body>
 </html>
