Implemented the rsa encryption so that a key per person is generated on account creation encryption itself has to be used later on

--- a/service/src/FlaskWebsite/website/templates/sign_up.html
+++ b/service/src/FlaskWebsite/website/templates/sign_up.html
@@ -26,11 +26,10 @@ content %}
   <div class="form-group">
     <label for="public_key">PublicKey</label>
     <input
-      type="text"
+      type="checkbox"
       class="form-control"
       id="public_key"
       name="public_key"
-      placeholder="public key"
     />
   </div>
   <!-- To be changed -->
