--- a/service/src/templates/group_page_unauthorized.html
+++ b/service/src/templates/group_page_unauthorized.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
     %}
     <h1 align="center">Notes</h1>
+    <div style="word-wrap: break-word;">
     <ul class="list-group list-group-flush" id="notes">
       {% for note in notes %}
       <li class="list-group-item">
@@ -9,4 +10,5 @@
       </li>
       {% endfor %}
     </ul>
+    </div>
     {% endblock %}
