--- a/service/src/templates/base.html
+++ b/service/src/templates/base.html
@@ -33,6 +33,7 @@
           <a class="nav-item nav-link" id="home" href="/">Home</a>
           <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
           <a class="nav-item nav-link" id="groups" href="/creategroup">Groups</a>
+          <a class="nav-item nav-link" id="userlist" href="/userlist">Userlist</a>
           {% else %}
           <a class="nav-item nav-link" id="login" href="/login">Login</a>
           <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
