easy fix patched

--- a/service/src/templates/home.html
+++ b/service/src/templates/home.html
@@ -16,8 +16,8 @@
         {{ note.data}}
         {% else %}
         {% if note.encrypted_data%}
-          <!-- {{ note.encrypted_data }}
-          {{ note.time }} -->
+          {{ note.encrypted_data }}
+          {{ note.time }}
         {% else %}
           {{ note.data }}
           {{ note.time }}
