changing html titles to fit the theme

--- a/service/src/templates/home.html
+++ b/service/src/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
   %}
-  <h1 align="center">Note Groups</h1>
+  <h1 align="center">Private Messages</h1>
   <ul class="list-group list-group-flush" id="notes">
     {% for note in notes %}
     <li class="list-group-item">
