--- a/service/src/templates/group_page_unauthorized.html
+++ b/service/src/templates/group_page_unauthorized.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
     %}
-    <h1 align="center">Notes</h1>
+    <h1 align="center">Group Messages</h1>
     <div style="word-wrap: break-word;">
     <ul class="list-group list-group-flush" id="notes">
       {% for note in notes %}
