making style changes based on Review

--- a/service/src/templates/base.html
+++ b/service/src/templates/base.html
@@ -33,7 +33,7 @@
           {% if user.is_authenticated %}
           <a class="nav-item nav-link" id="home" href="/">Home</a>
           <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
-          <a class="nav-item nav-link" id="groups" href="/creategroup">Groups</a>
+          <a class="nav-item nav-link" id="groups" href="/creategroup">Groupchats</a>
           <a class="nav-item nav-link" id="userlist" href="/userlist">Userlist</a>
           <a class="nav-item nav-link ml-auto" id="profil" href="/profil">Profil</a>
           {% else %}
