--- a/service/src/templates/groups.html
+++ b/service/src/templates/groups.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %}Group Channels{% endblock %} {% block content
+{% extends "base.html" %} {% block title %}Group Chats{% endblock %} {% block content
   %}
   <form method="POST">
     <div style="word-wrap: break-word;">
