--- a/service/src/templates/home.html
+++ b/service/src/templates/home.html
@@ -33,7 +33,7 @@
   <form method="POST">
     <textarea name="note" id="note" class="form-control"></textarea>
     <br />
-    <input type="text" name="public_key" id="public_key" class="form-control" placeholder="Enter Public Key">
+    <input type="text" name="public_key" id="public_key" class="form-control" placeholder="Enter Public Key to send encrypted message to the owner of the key">
     <br />
     <div align="center">
       <button type="submit" class="btn btn-primary">Add Note</button>
