--- a/service/src/templates/userlist.html
+++ b/service/src/templates/userlist.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
     %}
     <form method="GET">
-      <h1 align="center">User</h1>
+      <h2 align="center">List of Users with PublicKey</h1>
       <div style="word-wrap: break-word;">
       <ul class="list-group list-group-flush" id="userlist">
         {% for user in users %}
