--- a/service/src/templates/base.html
+++ b/service/src/templates/base.html
@@ -20,30 +20,31 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbar"
-      >
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbar">
         <div class="navbar-nav">
           {% if user.is_authenticated %}
           <a class="nav-item nav-link" id="home" href="/">Home</a>
-          <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
           <a class="nav-item nav-link" id="groups" href="/creategroup">Groupchats</a>
           <a class="nav-item nav-link" id="userlist" href="/userlist">Userlist</a>
-          <a class="nav-item nav-link ml-auto" id="profil" href="/profil">Profil</a>
+          <a class="nav-item nav-link" id="profil" href="/profil">Profil</a>
+          <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
           {% else %}
-          <a class="nav-item nav-link" id="login" href="/login">Login</a>
-          <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
-          <a class="nav-item nav-link" id="backup" href="/backup">Backup</a>
+          <div class="navbar-nav ml-auto">
+            <a class="nav-item nav-link" id="login" href="/login">Login</a>
+            <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
+            <a class="nav-item nav-link" id="backup" href="/backup">Backup</a>
+          </div>
           {% endif %}
+        </div>
+        <div class="navbar-nav ml-auto">
+          <a class="nav-item nav-link ml-auto" id="navbar" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Support</a>
         </div>
       </div>
     </nav>
+  
 
     {% with messages = get_flashed_messages(with_categories=true) %} {% if
     messages %} {% for category, message in messages %} {% if category ==
