--- a/service/src/templates/base.html
+++ b/service/src/templates/base.html
@@ -40,6 +40,7 @@
           {% endif %}
         </div>
         <div class="navbar-nav ml-auto">
+          <a class="nav-item nav-link ml-auto" id="navbar" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Contact Us</a>
           <a class="nav-item nav-link ml-auto" id="navbar" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Support</a>
         </div>
       </div>
