--- a/service/src/templates/profil.html
+++ b/service/src/templates/profil.html
@@ -5,7 +5,7 @@
       <div style="word-wrap: break-word;">
       <ul class="list-group list-group-flush" id="userlist">
         <li class="list-group-item">Email: {{ user.email }}</li>
-        <li class="list-group-item">First Name: {{ user.first_name }}</li>
+        <li class="list-group-item">Name: {{ user.name }}</li>
         <li class="list-group-item">Status: {{ user.status }}</li>
       </ul>
       </div>
