--- a/service/src/templates/base.html
+++ b/service/src/templates/base.html
@@ -84,20 +84,20 @@
 
 {% block javascript %}
     <script type="text/javascript">
-      function deleteNote(noteId) {
-  fetch("/delete-note", {
+      function deletemessage(messageId) {
+  fetch("/delete-message", {
     method: "POST",
-    body: JSON.stringify({ noteId: noteId }),
+    body: JSON.stringify({ messageId: messageId }),
   }).then((_res) => {
     window.location.href = "/";
   });
   }
 </script>
   <script type="text/javascript">
-    function deleteNoteGroup(noteGroupId) {
-    fetch("/delete-note-group", {
+    function deleteMessageGroup(MessageGroupId) {
+    fetch("/delete-message-group", {
       method: "POST",
-      body: JSON.stringify({ noteGroupId: noteGroupId }),
+      body: JSON.stringify({ MessageGroupId: MessageGroupId }),
     }).then((_res) => {
       window.location.href = window.location.pathname;
     });
