--- a/service/src/templates/group_page_unauthorized.html
+++ b/service/src/templates/group_page_unauthorized.html
@@ -1,5 +1,11 @@
-{% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
-    %}
+{% extends "base.html" %}
+{% block title %}BACKUP{% endblock %} 
+
+<!-- {% block head %}
+    <link rel="stylesheet" href="path/to/your-specific.css">
+{% endblock %} -->
+
+{% block content%}
     <h1 align="center">Group Messages</h1>
     <div style="word-wrap: break-word;">
     <ul class="list-group list-group-flush" id="messages">
