--- a/service/src/templates/home.html
+++ b/service/src/templates/home.html
@@ -1,22 +1,27 @@
-{% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
-  %}
+{% extends "base.html" %}
+{% block title %}BACKUP{% endblock %} 
+
+<!-- {% block head %}
+    <link rel="stylesheet" href="static/home.css">
+{% endblock %} -->
+
+{% block content%}
   <h1 align="center">Private Messages</h1>
   <ul class="list-group list-group-flush" id="messages">
     {% for message in messages %}
-    <li class="list-group-item">
-      <div style="word-wrap: break-word;">
+    <li class="list-group-item {% if message.owner_id == user.id %}sent-message{% elif message.destination_id == user.id and message.owner_id != message.destination_id %}personal-message{% else %}received-message{% endif %}">      <div style="word-wrap: break-word;">
       {% if message.owner_id == user.id %}
         {{ message.data }}
         {{ message.time }}
-      <button type="button" class="close" onClick="deletemessage({{ message.id }})">
-        <span aria-hidden="true">&times;</span>
-      </button>
+        <button type="button" class="close" onClick="deletemessage({{ message.id }})">
+          <span aria-hidden="true">&times;</span>
+        </button>
       {% else %}
-        {% if message.destination_id == user.id and message.owner_id != message.destionation_id%}
+        {% if message.destination_id == user.id and message.owner_id != message.destination_id %}
         {{ message.data}}
         {{ message.time }}
         {% else %}
-        {% if message.encrypted_data%}
+        {% if message.encrypted_data %}
           {{ message.encrypted_data }}
           {{ message.time }}
         {% else %}
@@ -26,7 +31,6 @@
         {% endif %}
       {% endif %}
       </div>
-    </li>
     </li>
     {% endfor %}
   </ul>
