--- a/service/src/templates/add_friend.html
+++ b/service/src/templates/add_friend.html
@@ -1,5 +1,11 @@
-{% extends "base.html" %} {% block title %}ADD FRIENDS{% endblock %} {% block content
-  %}
+{% extends "base.html" %}
+{% block title %}BACKUP{% endblock %} 
+
+<!-- {% block head %}
+    <link rel="stylesheet" href="path/to/your-specific.css">
+{% endblock %} -->
+
+{% block content%}
   <form method="POST">
     <div style="word-wrap: break-word;">
     <ul class="list-group list-group-flush" id="friends">
