--- a/service/src/templates/login.html
+++ b/service/src/templates/login.html
@@ -1,5 +1,11 @@
-{% extends "base.html" %} {% block title %}Login{% endblock %} {% block content
-%}
+{% extends "base.html" %}
+{% block title %}BACKUP{% endblock %} 
+
+{% block head %}
+    <link rel="stylesheet" href="/static/login.css">
+{% endblock %}
+
+{% block content%}
 <form method="POST">
   <h3 align="center">Login</h3>
   <div class="form-group">
