--- a/service/src/templates/profil.html
+++ b/service/src/templates/profil.html
@@ -1,5 +1,11 @@
-{% extends "base.html" %} {% block title %}Profil{% endblock %} {% block content
-    %}
+{% extends "base.html" %}
+{% block title %}BACKUP{% endblock %} 
+
+<!-- {% block head %}
+    <link rel="stylesheet" href="path/to/your-specific.css">
+{% endblock %} -->
+
+{% block content%}
     <form method="GET">
       <h1 align="center">Profil</h1>
       <div style="word-wrap: break-word;">
