--- a/service/src/templates/sign_up.html
+++ b/service/src/templates/sign_up.html
@@ -1,5 +1,11 @@
-{% extends "base.html" %} {% block title %}Sign Up{% endblock %} {% block
-content %}
+{% extends "base.html" %}
+{% block title %}BACKUP{% endblock %} 
+
+<!-- {% block head %}
+    <link rel="stylesheet" href="path/to/your-specific.css">
+{% endblock %} -->
+
+{% block content%}
 <form method="POST">
   <h3 align="center">Sign Up</h3>
   <div class="form-group">
