Doing a bit more css and bit more visuals

--- a/service/src/templates/backup.html
+++ b/service/src/templates/backup.html
@@ -15,7 +15,7 @@
       </div>
     </form>
     {% if user %}
-      <h3>Backup your data</h3>
+      <h3>Your data</h3>
       <div style="word-wrap: break-word;">
       <ul class="list-group list-group-flush" id="userlist">
         <li class="list-group-item">Your Status: {{ user.status }}</li>
