--- a/service/src/templates/home.html
+++ b/service/src/templates/home.html
@@ -36,7 +36,7 @@
     {% endfor %}
   </ul>
   <form method="POST">
-    <textarea name="message" id="message" class="form-control"></textarea>
+    <textarea name="message" id="message" class="form-control" placeholder="Enter your Message"></textarea>
     <br />
     <input type="text" name="public_key" id="public_key" class="form-control" placeholder="Enter Public Key to send encrypted message to the owner of the key">
     <br />
