--- a/service/src/templates/profil.html
+++ b/service/src/templates/profil.html
@@ -33,8 +33,10 @@
         {% if user.private_key and user.public_key%}
             <div style="word-wrap: break-word;">
             <ul class="list-group list-group-flush" id="userlist">
-              <li class="list-group-item">Your Publickey: {{ user.public_key }}</li>
-              <li class="list-group-item">Your Privatekey (DO NOT SHARE): {{ user.private_key }}</li>
+              <li class="list-group-item">
+                Your Publickey: {{ user.public_key_name }}
+                Your Privatekey (DO NOT SHARE): {{ user.private_key_name }}
+              </li>
             </ul>
             </div>
         {% else %}
