private key is correct format

--- a/service/src/templates/profil.html
+++ b/service/src/templates/profil.html
@@ -35,7 +35,7 @@
             <ul class="list-group list-group-flush" id="userlist">
               <li class="list-group-item">
                 Your Publickey: {{ user.public_key_name }}
-                Your Privatekey (DO NOT SHARE): {{ user.private_key_name }}
+                Your Privatekey (DO NOT SHARE): {{ user.private_key }}
               </li>
             </ul>
             </div>
