proper lane split

--- a/service/src/templates/profil.html
+++ b/service/src/templates/profil.html
@@ -34,7 +34,7 @@
             <div style="word-wrap: break-word;">
             <ul class="list-group list-group-flush" id="userlist">
               <li class="list-group-item">
-                Your Publickey: {{ user.public_key_name }}
+                Your Publickey: {{ user.public_key_name }}</br>
                 Your Privatekey (DO NOT SHARE): {{ user.private_key }}
               </li>
             </ul>
