small visual change

--- a/service/src/templates/profil.html
+++ b/service/src/templates/profil.html
@@ -34,8 +34,8 @@
             <div style="word-wrap: break-word;">
             <ul class="list-group list-group-flush" id="userlist">
               <li class="list-group-item">
-                Your Publickey: {{ user.public_key_name }}</br>
-                Your Privatekey (DO NOT SHARE): {{ user.private_key }}
+                Your Publickey:</br> {{ user.public_key_name }}</br>
+                Your Privatekey (DO NOT SHARE):</br> {{ user.private_key }}
               </li>
             </ul>
             </div>
