--- a/service/src/templates/base.html
+++ b/service/src/templates/base.html
@@ -43,8 +43,8 @@
           {% endif %}
         </div>
         <div class="navbar-nav ml-auto">
-          <a class="nav-item nav-link ml-auto" id="navbar" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Contact Us</a>
-          <a class="nav-item nav-link ml-auto" id="navbar" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Support</a>
+          <a class="nav-item nav-link ml-auto" id="navbar" href="https://www.youtube.com/watch?v=kxopViU98Xo">Contact Us</a>
+          <a class="nav-item nav-link ml-auto" id="navbar" href="https://www.youtube.com/watch?v=FwVzDrVVmBk">Support</a>
         </div>
       </div>
     </nav>
