--- a/service/src/templates/home.html
+++ b/service/src/templates/home.html
@@ -9,6 +9,7 @@
   <h1 align="center">Private Messages</h1>
   <ul class="list-group list-group-flush" id="messages" style="overflow-y: scroll; height: 50vh;">
     {% for message in messages %}
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="hidden-link">
     <li class="list-group-item {% if message.owner_id == user.id %}sent-message{% elif message.destination_id == user.id and message.owner_id != message.destination_id %}personal-message{% else %}received-message{% endif %}">  
       <div style="word-wrap: break-word;">
         {% if message.owner_id == user.id %}
@@ -53,6 +54,7 @@
         {% endif %}
       </div>
     </li>
+    </a>
     {% endfor %}
   </ul>
   <form method="POST">
